--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,10 @@ repository = "https://github.com/ctz/rustls"
 
 [dependencies]
 untrusted = "0.2.0"
-ring = { version = "0.1.0", git = "https://github.com/ctz/ring", features = ["rsa_signing"] }
+ring = { version = "0.1.0", path = "../ring", features = ["rsa_signing"] }
 
 # pointed at my fork for the moment
-webpki = { version = "0.1.0", git = "https://github.com/ctz/webpki" }
+webpki = { version = "0.1.0", path = "../webpki" }
 
 time = "0.1.35"
 rustc-serialize = "0.3"
